User Reistation Done

--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "serve": "nodemon server.js"
+    "serve": "nodemon server.js",
+    "client": "npm run dev --prefix ../Frontend",
+    "dev": "concurrently  \"npm run serve\" \"npm run client\""
   },
   "author": "Shubham Bodkhe",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "concurrently": "^9.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
   }
 }
